# choreonoid_ros_tutorial

./: CMakeLists.txt  package.xml
launch/: detect_plane.launch  go2_inference_athletic.launch  go2_inference_challenge.launch  go2_inference_shorttrack.launch  point_cloud_process.launch  simple_tank_tutorial.launch  tank_challenge.launch
project/: ros_go2_inference_athletic.cnoid  ros_go2_inference_shorttrack.cnoid  ros_tank_athletic.cnoid  ros_tank_shorttrack.cnoid  ros_tank_tutorial.cnoid
src/: CMakeLists.txt  RtGo2InferenceCmdvelController.cpp  RtGo2InferenceJoystickController.cpp  RttTankController.cpp
